Updated pikaday to have the option to disable days of week

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -98,9 +98,12 @@
     <script type="text/javascript">
 
           $( document ).ready(function() {
+            var today = new Date();
             $('.datepicker').each(function (index) {
               var picker = new Pikaday({
                 field: this,
+                holidays: false,
+                disabledDaysOfWeek: [0,2,4,6],
                 format: 'MM-DD-YYYY',
               });
             });
