lots of PEP8 and remove academic dates

--- a/tinker/templates/about-page.html
+++ b/tinker/templates/about-page.html
@@ -53,6 +53,8 @@
             Person designed by <a href="http://www.thenounproject.com/visionsbuero">johanna</a> from the <a href="http://www.thenounproject.com">Noun Project</a>
         </div>
     </div>
+
+    <small>Logged in as: {{ session['username'] }}</small>
 {% endblock %}
 
 
