--- a/tinker/redirects/templates/redirect-ajax.html
+++ b/tinker/redirects/templates/redirect-ajax.html
@@ -1,6 +1,16 @@
 {% for redirect in redirects %}
   <tr class="redirect-row table-hover">
-    <td class="from_path">{{ redirect.from_path }}</td>
+    <td>
+        <span class="from_path">{{ redirect.from_path }}</span>
+        {% if redirect.short_url %}
+          <span class="label round">Short URL</span>
+        {% endif %}
+    </td>
     <td class="to_url">{{ redirect.to_url }}</td>
+    {% if redirect.expiration_date %}
+      <td class="expiration_date">{{ redirect.expiration_date }}</td>
+    {% else %}
+        <td></td>
+    {% endif %}
   </tr>
 {% endfor %}
