--- a/tinker/templates/peanut.html
+++ b/tinker/templates/peanut.html
@@ -27,19 +27,21 @@
 
       </style>
 
-
-
     </head>
     <body>
-        <h1><img src="http://i.imgur.com/YIlhvLe.gif" style="height: 100px;">Peanuts!<img src="http://i.imgur.com/YIlhvLe.gif" style="height: 100px;"></h1>
+            <h1>
+                <img src="http://i.imgur.com/YIlhvLe.gif" style="height: 100px;">
+                <img src="http://www.wonder-tonic.com/geocitiesizer/images/point.gif">Peanuts!
+                <img src="http://i.imgur.com/YIlhvLe.gif" style="height: 100px;">
+            </h1>
+
         <marquee width="400px" behavior="SCROLL" bgcolor="yellow" loop="100">Learn about some really awesome peanut facts!</marquee>
         <div style="height:100px; widht:500px;">
         </div>
-        <div class="center" style="height:500px; width:400px; background:grey">
-            peanut facts go here
+        <div id="facts" class="center" style="height:200px; width:400px; background:grey">
         </div>
-        <button>Next Fact</button>
-        <div style="height:200px; widht:500px;">
+        <button id="next-fact">Next Fact</button>
+        <div style="height:500px; widht:500px;">
         </div>
 
 
@@ -51,9 +53,21 @@
         <img src="http://www.wonder-tonic.com/geocitiesizer/images/ie_logo.gif">
         <img src="http://www.wonder-tonic.com/geocitiesizer/images/noframes.gif">
         <img src="http://www.wonder-tonic.com/geocitiesizer/images/notepad.gif">
+        <img src="http://www.wonder-tonic.com/geocitiesizer/images/dancingbaby.gif">
     </div>
 
     </body>
-
+    <script src="//cdn3.bethel.edu/js/vendor/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        function load_a_fact(){
+            $.post( "/peanut/fact", function( data ) {
+              $( "#facts" ).html( data['fact'] );
+            });
+        }
+        $("#next-fact").click(load_a_fact)
+        $( document ).ready(function() {
+            load_a_fact();
+        });
+    </script>
 
 </html>
