--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -3,6 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Sherie</title>
+    <style>
+        body {
+            background-image: url(https://lh3.googleusercontent.com/5iYUQSmqrYI5WD3xZRgil_VGhYDPlAOib8WgzDEIbhgAWaAEvP-BySl616l4hkFMK1Y4tQ=s190),
+            url(https://lh5.googleusercontent.com/Q9WnYgtjKg7y8d_YPFJeQRaticyD3UB_hkX7Il79aKBLut7ItQKTyK5QfyhnNzFBoE5lMg=s190),
+            url(https://lh4.googleusercontent.com/3Ub8pcNlRPkPQVFCPFnj4wwRya2dYMOhUV_0ybxaiwRKSdPU-3F1t0f5eTQwfSSA_QtZIQ=s190)
+            ;
+        }
+    </style>
 </head>
 <body>
 Sherie
