--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -5,14 +5,48 @@
     <title>Sherie</title>
     <style>
         body {
-            background-image: url(https://lh3.googleusercontent.com/5iYUQSmqrYI5WD3xZRgil_VGhYDPlAOib8WgzDEIbhgAWaAEvP-BySl616l4hkFMK1Y4tQ=s190),
-            url(https://lh5.googleusercontent.com/Q9WnYgtjKg7y8d_YPFJeQRaticyD3UB_hkX7Il79aKBLut7ItQKTyK5QfyhnNzFBoE5lMg=s190),
-            url(https://lh4.googleusercontent.com/3Ub8pcNlRPkPQVFCPFnj4wwRya2dYMOhUV_0ybxaiwRKSdPU-3F1t0f5eTQwfSSA_QtZIQ=s190)
-            ;
+            background-image: url("http://cdn1.bethel.edu/images/sherie.jpg");
+            background-size: 75%;
+        }
+        .holder {
+            background: #fff;
+            padding: 2em;
+            width: 49%;
+            margin: 3em auto;
+            display:flex;
+        }
+        .first,.second {
+            background: tomato;
+            padding: 2em;
+            flex: 1;
+            border: 1em solid #fff;
         }
     </style>
 </head>
 <body>
-Sherie
+
+<div class="holder">
+    <div class="first">        
+        <h1>Then</h1>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </div>
+    <div class="second">
+        <h1>Now</h1>
+        <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </div>
+</div>
+
 </body>
 </html>
