Added Education Link
Boom!

--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -29,7 +29,7 @@
     <div class="first">        
         <h1>Then</h1>
         <ul>
-            <li><a href=""></a></li>
+            <li><a href="http://web.archive.org/web/19990128003920/http://www.bethel.edu/Majors/Education/home.htm">Education Department</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
