--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Sherie</title>
+    <title>Sherie's Amazing Website</title>
     <style>
         body {
             background-image: url("http://cdn1.bethel.edu/images/sherie.jpg");
@@ -30,19 +30,19 @@
         <h1>Then</h1>
         <ul>
             <li><a href="http://web.archive.org/web/19990128003920/http://www.bethel.edu/Majors/Education/home.htm">Education Department</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="http://web.archive.org/web/19970302232528/http://www.bethel.edu/">Homepage</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9N1pRcnZNNUNvU0U/view?usp=sharing">Me: Click Here</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9SG1rVmpucmY5SHM/view?usp=sharing">Erik Gruber</a></li>
             <li><a href=""></a></li>
         </ul>
     </div>
     <div class="second">
         <h1>Now</h1>
         <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://www.bethel.edu/undergrad/academics/education/">Education Department</a></li>
+            <li><a href="www.bethel.edu">Homepage</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9ZXVuWjc4SGZRNlE/view?usp=sharing">Me</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9UGp1aGNCVDFpcnc/view?usp=sharing">Erik</a></li>
             <li><a href=""></a></li>
         </ul>
     </div>
