--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -47,6 +47,17 @@
         </ul>
     </div>
 </div>
+<div class="holder"> 
+  <h1>This is how Sherie's Feels Now: </h1><br>
+   <ul>
+          <li><a href="http://www.jibjab.com/view/tEbaplw6RFOjh9CDF_CrfQ">Celebratory </a></li>
+          <li><a href="http://www.jibjab.com/view/aCY_iL9ARBWwKKMLQpl0tA">Happy </a></li>
+          <li><a href="http://www.jibjab.com/view/i-JmlbdrQMOvsc7NHa5GLw">Ready for Easter</a></li>
+          
+          
+  </ul>
+  </div>
+
 
 </body>
 </html>
