--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -27,7 +27,7 @@
 
 <div class="holder">
     <div class="first">        
-        <h1>Then</h1>
+        <h1>THEN</h1>
         <ul>
             <li><a href="http://web.archive.org/web/19990128003920/http://www.bethel.edu/Majors/Education/home.htm">Education Department</a></li>
             <li><a href="http://web.archive.org/web/19970302232528/http://www.bethel.edu/">Homepage</a></li>
@@ -37,7 +37,7 @@
         </ul>
     </div>
     <div class="second">
-        <h1>Now</h1>
+        <h1>NOW/h1>
         <ul>
             <li><a href="https://www.bethel.edu/undergrad/academics/education/">Education Department</a></li>
             <li><a href="www.bethel.edu">Homepage</a></li>
