--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -37,7 +37,7 @@
         </ul>
     </div>
     <div class="second">
-        <h1>NOW/h1>
+        <h1>NOW</h1>
         <ul>
             <li><a href="https://www.bethel.edu/undergrad/academics/education/">Education Department</a></li>
             <li><a href="www.bethel.edu">Homepage</a></li>
