--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -57,6 +57,15 @@
           
   </ul>
   </div>
+  <div>
+  .
+  .
+  .
+  </div>
+  <div>
+  <h1>Thank You</h1>
+  <p> Thank you from the Web and Creative Services team. You have done so much for all of us and we appreciate you more then words could ever express.
+  </div>
 
 
 </body>
