--- a/tinker/templates/sherie.html
+++ b/tinker/templates/sherie.html
@@ -8,6 +8,21 @@
             background-image: url("http://cdn1.bethel.edu/images/sherie.jpg");
             background-size: 75%;
         }
+		h1 {
+			font: 50px arial, sans-serif;
+		}
+		h2 {
+			font: 30px arial, sans-serif;
+		}
+		h3 {
+			font: 50px arial, sans-serif;
+			color: #ffffff;
+			background: #333333;
+			text-align: center;
+		}
+		p {
+			font: 18px arial, sans-serif;
+		}
         .holder {
             background: #fff;
             padding: 2em;
@@ -24,46 +39,48 @@
     </style>
 </head>
 <body>
+<h3> Sherie's Incredible Site</h3>
 
 <div class="holder">
     <div class="first">        
         <h1>THEN</h1>
         <ul>
-            <li><a href="http://web.archive.org/web/19990128003920/http://www.bethel.edu/Majors/Education/home.htm">Education Department</a></li>
             <li><a href="http://web.archive.org/web/19970302232528/http://www.bethel.edu/">Homepage</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9N19jUlNVeFdXaEU/view?usp=sharing">Sue</a></li>
+            <li><a href="http://web.archive.org/web/19990128003920/http://www.bethel.edu/Majors/Education/home.htm">Education Department</a></li>
+            
             <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9N1pRcnZNNUNvU0U/view?usp=sharing">Me: Click Here</a></li>
             <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9SG1rVmpucmY5SHM/view?usp=sharing">Erik Gruber</a></li>
-            <li><a href=""></a></li>
+            
         </ul>
     </div>
     <div class="second">
         <h1>NOW</h1>
         <ul>
+            <li><a href="https://www.bethel.edu">Homepage</a></li>
+            <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9QjU3a0NubzNubUk/view?usp=sharing">Sue</a></li>
             <li><a href="https://www.bethel.edu/undergrad/academics/education/">Education Department</a></li>
-            <li><a href="www.bethel.edu">Homepage</a></li>
             <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9ZXVuWjc4SGZRNlE/view?usp=sharing">Me</a></li>
             <li><a href="https://drive.google.com/file/d/0B2eWG5QrjCB9UGp1aGNCVDFpcnc/view?usp=sharing">Erik</a></li>
-            <li><a href=""></a></li>
         </ul>
     </div>
 </div>
 <div class="holder"> 
-  <h1>This is how Sherie's Feels Now: </h1><br>
+  <h2>This is how Sherie's Feels Now: </h2>
    <ul>
           <li><a href="http://www.jibjab.com/view/tEbaplw6RFOjh9CDF_CrfQ">Celebratory </a></li>
           <li><a href="http://www.jibjab.com/view/aCY_iL9ARBWwKKMLQpl0tA">Happy </a></li>
-          <li><a href="http://www.jibjab.com/view/i-JmlbdrQMOvsc7NHa5GLw">Ready for Easter</a></li>
-          
-          
+          <li><a href="http://www.jibjab.com/view/i-JmlbdrQMOvsc7NHa5GLw">Ready for Easter</a></li> 
   </ul>
   </div>
   <div>
-  .
-  .
-  .
+    <p>.</p>
+     <p>.</p>
+      <p>.</p>
+       <p>.</p>
+        <p>.</p>
   </div>
-  <div>
-  <h1>Thank You</h1>
+  <div class="holder">
   <p> Thank you from the Web and Creative Services team. You have done so much for all of us and we appreciate you more then words could ever express.
   </div>
 
