--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -62,6 +62,48 @@
         <hr/>
       </div>
     {% endfor %}
+
+
+    <!-- Event Approver forms -->
+    {% if event_approver_forms %}
+        <br />
+        <hr />
+        <h3>Event Approver Forms</h3>
+        <hr />
+    {% endif %}
+    {% for form in event_approver_forms %}
+        <div class="row">
+        <div class="large-6 columns">
+          <p>
+            {% if form.is_published %}
+              <a href={{ form.path }}>{{ form.title }}</a>
+            {% else %}
+              {{ form.title }}
+            {% endif %}
+            <br/>
+            {% if form.is_published%}
+                <small>
+                    <p>{{ form.dates | safe}}</p>
+                    <a href={{ form.path }}>{{ form.path }}</a>
+                </small>
+            {% endif %}
+          </p>
+        </div>
+        <div class="large-6 columns small-3">
+          <ul class="button-group">
+            {% if form.is_published %}
+              <li><a href="{{ form.path }}" class="small button success">View</a></li>
+              <li><a href="/event/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
+            {% else %}
+              <li><a class="small button success">Not Approved</a></li>
+            {% endif %}
+            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-event-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
+           </ul>
+        </div>
+        <hr/>
+      </div>
+    {%  endfor %}
+
   </div>
 </div>
 
