Sorted Events/Faculty listings

--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -68,7 +68,7 @@
     {% if event_approver_forms %}
         <br />
         <hr />
-        <h3>Event Approver Forms</h3>
+        <h3>Event Approver List</h3>
         <hr />
     {% endif %}
     {% for form in event_approver_forms %}
