--- a/tinker/publish/templates/publish-home.html
+++ b/tinker/publish/templates/publish-home.html
@@ -36,7 +36,7 @@
       <label>Publish to:
           <br />
         <input type="radio" name="publish-to" value="staging" checked> Staging<br />
-        <input type="radio" name="publish-to" value="production" checked> Production<br />
+        <input type="radio" name="publish-to" value="production"> Production<br />
         <input type="radio" name="publish-to" value="all"> All<br />
       </label>
     </div>
