--- a/tinker/publish/templates/publish-table.html
+++ b/tinker/publish/templates/publish-table.html
@@ -10,6 +10,7 @@
             <button class="publishButton" onclick="publishAsset('{{ result.type }}', '{{ result.id }}', '{{ counter }}');">Publish</button>
         </td>
         <td id="publish_button_{{ counter }}"></td>
-        <td><button onclick="moreInfo('{{ result.type }}', '{{ result.id }}')">More Info</button></td>
+{#        <td><button class='more-info' id='more-info-{{ result.id }}' onclick="moreInfo('{{ result.type }}', '{{ result.id }}')">More Info</button></td>#}
+        <td><button onclick="moreInfo('{{ result.type }}', '{{ result.id }}')" data-reveal-id="dialog" id="more-info-{{ result.id }}" data-publish-id="{{ result.id }}" data-publish-type="{{ result.type }}" class="more-info">More Info</button></td>
     </tr>
 {% endfor %}
