A fix for accidental 'enter' submits for fac bios and events

--- a/tinker/templates/tinker-base.html
+++ b/tinker/templates/tinker-base.html
@@ -100,6 +100,13 @@
       }
       $(document).foundation();
   });
+
+  $(window).keydown(function(event){
+    if(event.keyCode == 13) {
+      event.preventDefault();
+      return false;
+    }
+  });
   </script>
 
   {% endblock %}
