--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -15,10 +15,10 @@
          {% endif %}
 
          {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
-             {% if '/faculty-bios/' in request.path %}
-               <li><a href="/faculty-bios" class="button button-nav active">Faculty Bios</a></li>
+             {% if '/faculty-bio/' in request.path %}
+               <li><a href="/faculty-bio" class="button button-nav active">Faculty Bios</a></li>
              {% else %}
-                 <li><a href="/faculty-bios" class="button button-nav">Faculty Bios</a></li>
+                 <li><a href="/faculty-bio" class="button button-nav">Faculty Bios</a></li>
              {% endif %}
          {% endif %}
 
