Polished up e-announcement rss feed

--- a/tinker/e_announcements/templates/e-announcements-form.html
+++ b/tinker/e_announcements/templates/e-announcements-form.html
@@ -126,8 +126,7 @@
               var picker = new Pikaday({
                 field: this,
                 disabledDaysOfWeek: [0,2,4,6],
-                format: 'MM-DD-YYYY',
-                minDate: new Date()
+                format: 'MM-DD-YYYY'
               });
             });
           });
