Changed faculty_bios to faculty_bio

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -35,7 +35,7 @@
         {% if 'FACULTY' in session['roles'] or 'Tinker Faculty Bios' in session['groups'] %}
             <div class="large-6 columns">
 
-              <a href="/faculty-bios" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Faculty Bios</a>
+              <a href="/faculty-bio" class="button expand"><img src="get-image/faculty-bio-icon.png" class="button-image" /><br />Faculty Bios</a>
             </div>
         {% endif %}
     </div>
