--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -38,6 +38,12 @@
          {% endif %}
       {% endif %}
 
-
+        {% if 'celanna' in session['username'] or 'ces55739' in session['username'] %}
+             {% if '/sync' in request.path %}
+               <li><a href="/sync" class="button button-nav active">Sync Metadata</a></li>
+             {% else %}
+                 <li><a href="/sync" class="button button-nav">Sync Metadata</a></li>
+             {% endif %}
+         {% endif %}
   </ul>
 {% endmacro %}
